# wdf_best_catalog

./: .env  .gitattributes  .gitignore  bucketize.py  cancel_all_batches.py  catalog.py  delete_all_files_from_oai.py  extract_descriptions.py  extract_texts.py  flat_catalog.py  flat_preprocess.py  ingest_catalog_embeds.py  oai_batch.py  openai_llm_resolver.py  openai_llm_resolver_v2.py  openai_llm_resolver_v3.py  openai_llm_resolver_v4.py  pyproject.toml  requirements.txt  scrape_website.py  streamlit_app.py  streamlitapp-requirements.txt  test_catalog_db.py
.streamlit/: config.toml
alternate_hierarchy/: find_hierarchy_texts.py  open_llm_resolver_v5.py  open_llm_resolver_v6.py
catalog_db/: chroma.sqlite3
catalog_db/eedef20a-bdd4-4f04-81c6-09f9e5b8fe5e/: index_metadata.pickle
catalog_db2/: colors.npz  groups.npz  products.npz
config/: configuration.py
data/: all_product_indices.json  all_products.json  alternative_hierarchy_db.json  base_product_titles.json  category.json  prod_family.json  prod_group.json  product.json
pages/: 1_hierarchical.py  2_complete.py  3_batched_hierarchy.py  4_flat_search.py  5_chatbot_search.py  6_email_parse.py
resources/: template_codes.py
utils/: find_base_names.py
