[project]
name = "best"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pybase64>=1.4.2",
#    "pysqlite3>=0.5.4",
#    "pysqlite3-binary>=0.5.4",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    ""
]
